[project]
name = "ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "sangho.jeon",email = "sangho.jeon@lgepartner.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ai_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
